--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 data
+data copy
 weights
+output
 */.vscode
+.github
 
 # macOS
 **/.DS_Store
@@ -18,3 +21,5 @@ weights
 # Instance specific files
 config
 secret
+checkpoints
+config
