--- a/default.config
+++ b/default.config
@@ -3,5 +3,7 @@
   "data_final": "data/final",
   "data_img2_output": "data/img2turbo_output",
   "data_original": "data/original",
-  "plotly_template": "plotly_white"
+  "plotly_template": "plotly_white",
+  "response": "data/responses.csv",
+  "output":"output"
 }
