--- a/default.config
+++ b/default.config
@@ -5,5 +5,7 @@
   "data_original": "data/original",
   "plotly_template": "plotly_white",
   "response": "data/responses.csv",
-  "output":"output"
+  "output":"output",
+  "answer": "data/answers.csv",
+  "compare": "data/compare/day_to_night"
 }
