--- a/default.config
+++ b/default.config
@@ -1,11 +1,9 @@
 {
-  "data": "data",
-  "data_final": "data/final",
-  "data_img2_output": "data/img2turbo_output",
-  "data_original": "data/original",
-  "plotly_template": "plotly_white",
-  "response": "data/responses.csv",
-  "output":"output",
-  "answer": "data/answers.csv",
-  "compare": "data/compare/day_to_night"
+  "data": "../data",
+  "data_final": "../data/final",
+  "data_img2_output": "../data/img2turbo_output",
+  "data_original": "../data/original",
+  "compare": "../data/compare",
+  "plotly_template": "plotly_white"
+
 }
