--- a/requirements.txt
+++ b/requirements.txt
@@ -1,170 +1,37 @@
-# This file may be used to create an environment using:==
-# $ conda create --name <env> --file <this file>==
-# platform: osx-arm64==
-absl-py==2.1.0
-accelerate==1.0.0
-addict==2.4.0
-aiofiles==23.2.1
-altair==5.4.1
-annotated-types==0.7.0
-antialiased-cnns==0.3
-anyio==4.6.0
-astunparse==1.6.3
-attrs==24.2.0
-basicsr==1.4.2
-beautifulsoup4==4.12.3
-blinker==1.8.2
-ca-certificates==2024.7.2
-cachetools==5.5.0
-certifi==2024.7.4
-charset-normalizer==3.3.2
-clean-fid==0.1.35
-click==8.1.7
-clip==1.0
-contourpy==1.3.0
-cycler==0.12.1
-decorator==4.4.2
-diffusers==0.25.1
-dominate==2.9.1
-einops==0.8.0
-exceptiongroup==1.2.2
-facexlib==0.3.0
-fastapi==0.115.0
-ffmpy==0.4.0
-filelock==3.16.1
-filterpy==1.4.5
-flatbuffers==24.3.25
-fonttools==4.54.1
-fsspec==2024.9.0
-ftfy==6.2.3
-future==1.0.0
-gast==0.6.0
-gdown==4.4.0
-gfpgan==1.3.8
-gitdb==4.0.11
-gitpython==3.1.43
-google-pasta==0.2.0
-gradio==3.43.1
-gradio-client==0.5.0
-grpcio==1.66.0
-h11==0.14.0
-h5py==3.11.0
-httpcore==1.0.6
-httpx==0.27.2
-huggingface-hub==0.25.1
-idna==3.8
-imageio==2.35.1
-imageio-ffmpeg==0.5.1
-importlib-metadata==8.4.0
-importlib-resources==6.4.5
-jinja2==3.1.4
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-keras==3.5.0
-kiwisolver==1.4.7
-lazy-loader==0.4
-libclang==18.1.1
-libcxx==14.0.6
-libffi==3.4.4
-lightning-utilities==0.11.7
-llvmlite==0.43.0
-lmdb==1.5.1
-lpips==0.1.4
-markdown==3.7
-markdown-it-py==3.0.0
-markupsafe==2.1.5
-matplotlib==3.9.2
-mdurl==0.1.2
-ml-dtypes==0.4.0
-moviepy==1.0.3
-mpmath==1.3.0
-namex==0.0.8
-narwhals==1.9.1
-ncurses==6.4
-networkx==3.2.1
-numba==0.60.0
-numpy==1.26.4
-open-clip-torch==2.26.1
+clip @ git+https://github.com/openai/CLIP.git
+einops>=0.6.1
+numpy>=1.24.4
+open-clip-torch>=2.20.0
 opencv-python==4.6.0.66
-openssl==3.0.14
-opt-einsum==3.3.0
-optree==0.12.1
-orjson==3.10.7
-packaging==24.1
-pandas==2.2.3
-peft==0.13.0
-pillow==10.4.0
-pip==24.2
-platformdirs==4.3.6
-proglog==0.1.10
-protobuf==4.25.4
-psutil==6.0.0
-pyarrow==17.0.0
-pydantic==2.9.2
-pydantic-core==2.23.4
-pydeck==0.9.1
-pydub==0.25.1
-pygments==2.18.0
-pyparsing==3.1.4
-pysocks==1.7.1
-python==3.9.19
-python-dateutil==2.9.0.post0
-python-multipart==0.0.12
-pytz==2024.2
-pyyaml==6.0.2
-readline==8.2
-referencing==0.35.1
-regex==2024.9.11
-requests==2.32.3
-rich==13.8.0
-rpds-py==0.20.0
-safetensors==0.4.5
-scikit-image==0.24.0
+pillow>=9.5.0
 scipy==1.11.1
-semantic-version==2.10.0
-setuptools==72.1.0
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.6
-sqlite==3.45.3
-starlette==0.38.6
-streamlit==1.39.0
-streamlit-keyup==0.2.0
-sympy==1.13.3
-tb-nightly==2.19.0a20241007
-tenacity==9.0.0
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-tensorflow-io-gcs-filesystem==0.37.1
-termcolor==2.4.0
-tifffile==2024.8.24
-timm==1.0.9
-tk==8.6.14
-tokenizers==0.15.2
-toml==0.10.2
-tomli==2.0.2
-torch==2.0.1
-torchaudio==2.0.2
+timm>=0.9.2
+tokenizers
+torch>=2.0.1
+
+torchaudio>=2.0.2
 torchdata==0.6.1
-torchmetrics==1.4.2
-torchvision==0.15.2
-tornado==6.4.1
-tqdm==4.66.5
+torchmetrics>=1.0.1
+torchvision>=0.15.2
+
+tqdm>=4.65.0
 transformers==4.35.2
-typing-extensions==4.12.2
-tzdata==2024.2
-urllib3==1.26.20
-uvicorn==0.31.0
-vision-aided-loss==0.1.0
-wcwidth==0.2.13
-websockets==11.0.3
-werkzeug==3.0.4
-wheel==0.43.0
-wrapt==1.16.0
-xformers==0.0.23.post1
-xz==5.4.6
-yapf==0.40.2
-zipp==3.20.1
-zlib==1.2.13
+urllib3<1.27,>=1.25.4
+xformers>=0.0.20
+streamlit-keyup==0.2.0
+lpips
+clean-fid
+peft
+dominate
+diffusers==0.25.1
+gradio==3.43.1
+huggingface_hub==0.24.7
+
+basicsr>=1.4.2
+facexlib>=0.2.5
+gfpgan>=1.3.5
+
+moviepy==1.0.3
+tensorflow==2.18.0
+
+vision_aided_loss
