--- a/default.config
+++ b/default.config
@@ -4,6 +4,6 @@
   "data_img2_output": "../data/img2turbo_output",
   "data_original": "../data/original",
   "compare": "../data/compare",
+  "transformation": "day_to_night",
   "plotly_template": "plotly_white"
-
 }
