updated readme file

--- a/default.config
+++ b/default.config
@@ -1,9 +1,5 @@
 {
-  "data": "../data",
-  "data_final": "../data/final",
-  "data_img2_output": "../data/img2turbo_output",
-  "data_original": "../data/original",
-  "compare": "../data/compare",
+  "data": "data",
   "transformation": "day_to_night",
   "plotly_template": "plotly_white"
 }
