--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,4 +1,3 @@
----
 ###########################
 ###########################
 ## Linter GitHub Actions ##
@@ -54,5 +53,6 @@ jobs:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           FILTER_REGEX_INCLUDE: .*
+          FILTER_REGEX_EXCLUDE: ^README\.md$
           VALIDATE_PYTHON_BLACK: false
           VALIDATE_PYTHON_ISORT: false
