--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+# Install PyTorch and related libraries first
+torch>=2.0.1
+torchvision>=0.15.2
+torchaudio>=2.0.2
+
+# Other dependencies
 clip @ git+https://github.com/openai/CLIP.git
 einops>=0.6.1
 numpy>=1.24.4
@@ -7,31 +13,24 @@ pillow>=9.5.0
 scipy==1.11.1
 timm>=0.9.2
 tokenizers
-torch>=2.0.1
-
-torchaudio>=2.0.2
-torchdata==0.6.1
-torchmetrics>=1.0.1
-torchvision>=0.15.2
-
 tqdm>=4.65.0
 transformers==4.35.2
 urllib3<1.27,>=1.25.4
 xformers>=0.0.20
 streamlit-keyup==0.2.0
-lpips
-clean-fid
-peft
-dominate
 diffusers==0.25.1
 gradio==3.43.1
+peft==0.13.0
 huggingface_hub==0.24.7
 
+# BasicSR and related libraries
 basicsr>=1.4.2
 facexlib>=0.2.5
 gfpgan>=1.3.5
 
+# Video processing and TensorFlow
 moviepy==1.0.3
 tensorflow==2.18.0
 
+# Custom library
 vision_aided_loss
