--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -53,6 +53,6 @@ jobs:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           FILTER_REGEX_INCLUDE: .*
-          FILTER_REGEX_EXCLUDE: ^README\.md$
+          FILTER_REGEX_EXCLUDE: (realesrgan_main/|img2turbo/|^README\.md$)
           VALIDATE_PYTHON_BLACK: false
           VALIDATE_PYTHON_ISORT: false
